tests/errors/test_17.x
// Main function may not call itself:w


fn main() -> int {

    main();

}
